adl-frontend/src/test/resources/unit/error/semantic/params/Param4.adl
//#SemanticError GroupId=MADL ErrorId=INVALID_REFERENCE_MISSING_ARGUMENT line=4

composite params.Param4 extends 
Composite1
(1)
{

}